objects/C_I_Checklist_Item_Admin__c.object
<CustomObject>
    <description>Used by C&amp;I to define checklist items required for certifications</description>
    <fields>
        <fullName>Certification_Type__c</fullName>
        <label>Certification Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual Certification</fullName>
                </value>
                <value>
                    <fullName>Quarterly Certification</fullName>
                </value>
                <value>
                    <fullName>Monthly Certification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Checklist_Item_Name__c</fullName>
        <label>Checklist Item Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Certification_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Audited Financial Statements</fullName>
                </value>
                <value>
                    <fullName>Background Check</fullName>
                </value>
                <value>
                    <fullName>Borrowing Base</fullName>
                </value>
                <value>
                    <fullName>Cash Audit</fullName>
                </value>
                <value>
                    <fullName>Co. Prep. Financial Statements</fullName>
                </value>
                <value>
                    <fullName>Collateral Audit</fullName>
                </value>
                <value>
                    <fullName>Collateral Validation</fullName>
                </value>
                <value>
                    <fullName>Compliance Audit</fullName>
                </value>
                <value>
                    <fullName>Corporate Federal &amp; State Tax Returns</fullName>
                </value>
                <value>
                    <fullName>Covenant Check</fullName>
                </value>
                <value>
                    <fullName>Credit Bureau Report (CBR)</fullName>
                </value>
                <value>
                    <fullName>Custodial Report</fullName>
                </value>
                <value>
                    <fullName>Development Budget</fullName>
                </value>
                <value>
                    <fullName>Financial Projections</fullName>
                </value>
                <value>
                    <fullName>Loan Review</fullName>
                </value>
                <value>
                    <fullName>Personal Federal &amp; State Tax Returns</fullName>
                </value>
                <value>
                    <fullName>Personal Financial Statement (PFS)</fullName>
                </value>
                <value>
                    <fullName>Procedural Audit</fullName>
                </value>
                <value>
                    <fullName>Proof of Insurance</fullName>
                </value>
                <value>
                    <fullName>Rent Roll/Lease Receivable Aging</fullName>
                </value>
                <value>
                    <fullName>Reporting Package</fullName>
                </value>
                <value>
                    <fullName>Risk Rating</fullName>
                </value>
                <value>
                    <fullName>Schedule of Security Deposits</fullName>
                </value>
                <value>
                    <fullName>Servicing Report</fullName>
                </value>
                <value>
                    <fullName>Site Inspections/Draw Request Packages</fullName>
                </value>
                <value>
                    <fullName>Site Visit</fullName>
                </value>
                <value>
                    <fullName>Status Updates</fullName>
                </value>
                <value>
                    <fullName>Technology Audit</fullName>
                </value>
                <value>
                    <fullName>Title Bring Down</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grace_Period__c</fullName>
        <label>Grace Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Checklist Item Admin records can only be associated with C&amp;I Opportunities</errorMessage>
            <filterItems>
                <field>Opportunity.RecordTypeId</field>
                <operation>equals</operation>
                <value>C&amp;I - AB Participation, C&amp;I - Bridge, C&amp;I - General, C&amp;I - Lender Finance</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>C&amp;I Checklist Item Admins</relationshipLabel>
        <relationshipName>C_I_Checklist_Item_Admins</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>C&amp;I Checklist Item Admin</label>
    <nameField>
        <label>Checklist Item Admin Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>C&amp;I Checklist Item Admins</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>